# LAMedia

MyApp/MyMedia/: CMakeLists.txt  build.gradle
MyApp/MyMedia/src/androidTest/java/com/la/mymedia/: ExampleInstrumentedTest.java
MyApp/MyMedia/src/debug/: AndroidManifest.xml
MyApp/MyMedia/src/main/: AndroidManifest.xml
MyApp/MyMedia/src/main/cpp/: XLive.cpp  XPlayer.cpp  XRecorder.cpp  jni_define.h  jvm_init.c  jvm_init.h
MyApp/MyMedia/src/main/cpp/XClip/: fast_start.c  ffmpeg_cmd.c  ffmpeg_jni_define.h  ffprobe_cmd.c  media_player.c
MyApp/MyMedia/src/main/cpp/XLive/: AudioStream.cpp  AudioStream.h  RtmpPusher.cpp  VideoStream.cpp  VideoStream.h  safe_queue.h
MyApp/MyMedia/src/main/cpp/XPlayer/: FFFilter.cpp  FFFilter.h  FFPlayerBuilder.cpp  FFResample.cpp  FFdecode.cpp  IDemux.cpp  IFilter.cpp  IFilter.h  IPlayer.h  IPlayerBuilder.cpp  IPlayerPorxy.cpp  XTexture.cpp
MyApp/MyMedia/src/main/cpp/XRecorder/: FFEncode.cpp  FFEncode.h  FFMux.cpp  FFMux.h  IEncode.cpp  IEncode.h  IMux.cpp  IMux.h  IObserver.h  XData.cpp  XData.h  XLog.h  XParameter.h  XThread.h
MyApp/MyMedia/src/main/java/com/la/media/: Media.java  MediaFragment.java  ViewPagerAdapter.java
MyApp/MyMedia/src/main/java/com/la/media/Camera/: CameraProcess.java  CameraProcessFragment.java
MyApp/MyMedia/src/main/java/com/la/media/Live/: Live.java  LiveFragment.java
MyApp/MyMedia/src/main/java/com/la/media/Player/: Player.java  PlayerFragment.java
MyApp/MyMedia/src/main/java/com/la/media/VideoProcess/: VideoProcess.java  VideoProcessFragment.java  VideoProcessPresenter.java
MyApp/MyMedia/src/main/java/com/la/mymedia/: MainActivity.java  TestActivity.java
MyApp/MyMedia/src/main/java/com/la/mymedia/clip/: FFmpegApplication.java  FFmpegCmd.java
MyApp/MyMedia/src/main/java/com/la/mymedia/clip/activity/: AudioHandleActivity.java  BaseActivity.java  ClipEnterActivity.java  FilterActivity.java  LiveActivity.java  MediaHandleActivity.java  MediaPlayerActivity.java  ProbeFormatActivity.java  PushActivity.java  VideoHandleActivity.java  VideoPreviewActivity.java
MyApp/MyMedia/src/main/java/com/la/mymedia/clip/adapter/: HorizontalAdapter.java
MyApp/MyMedia/src/main/java/com/la/mymedia/clip/format/: VideoLayout.java
MyApp/MyMedia/src/main/java/com/la/mymedia/clip/handler/: FFmpegHandler.java
MyApp/MyMedia/src/main/java/com/la/mymedia/clip/listener/: OnHandleListener.java  OnItemClickListener.java
MyApp/MyMedia/src/main/java/com/la/mymedia/clip/model/: AudioBean.java  MediaBean.java  VideoBean.java
MyApp/MyMedia/src/main/java/com/la/mymedia/clip/util/: FFmpegUtil.java  JsonParseTool.java
MyApp/MyMedia/src/main/java/com/la/mymedia/customview/: LayoutManagerTestActivity.java  MainActivity.java  MyFragment.java  SmartCameraTestActivity.java
MyApp/MyMedia/src/main/java/com/la/mymedia/customview/SmartCameraView/: SmartCameraView.java
MyApp/MyMedia/src/main/java/com/la/mymedia/customview/SmartCameraView/filter/advanced/: MagicAmaroFilter.java  MagicAntiqueFilter.java  MagicBeautyFilter.java  MagicBlackCatFilter.java  MagicBrannanFilter.java  MagicBrooklynFilter.java  MagicCalmFilter.java  MagicCoolFilter.java  MagicCrayonFilter.java  MagicEarlyBirdFilter.java  MagicEmeraldFilter.java  MagicEvergreenFilter.java  MagicFreudFilter.java  MagicHealthyFilter.java  MagicHefeFilter.java  MagicHudsonFilter.java  MagicImageAdjustFilter.java  MagicInkwellFilter.java  MagicKevinFilter.java  MagicLatteFilter.java  MagicLomoFilter.java  MagicN1977Filter.java  MagicNashvilleFilter.java  MagicNostalgiaFilter.java  MagicPixelFilter.java  MagicRiseFilter.java  MagicRomanceFilter.java  MagicSakuraFilter.java  MagicSierraFilter.java  MagicSketchFilter.java  (+12 more)
MyApp/MyMedia/src/main/java/com/la/mymedia/customview/SmartItemDecoration/: SmartItemDecoration.java
MyApp/MyMedia/src/main/java/com/la/mymedia/customview/SmartRecyclerViewLayoutManager/: Keyframes.java  PosTan.java  SmartLayoutManager.java
MyApp/MyMedia/src/main/java/com/la/mymedia/live/: LivePusherNew.java  NativePusher.java
MyApp/MyMedia/src/main/java/com/la/mymedia/live/activity/: LiveActivity.java  LiveEnterActivity.java
MyApp/MyMedia/src/main/java/com/la/mymedia/live/camera2/: Camera2Helper.java  Camera2Listener.java
MyApp/MyMedia/src/main/java/com/la/mymedia/live/listener/: LiveStateChangeListener.java
MyApp/MyMedia/src/main/java/com/la/mymedia/live/param/: AudioParam.java  VideoParam.java
MyApp/MyMedia/src/main/java/com/la/mymedia/live/stream/: AudioStream.java  CameraHelper.java  VideoStream.java  VideoStreamNew.java
MyApp/MyMedia/src/main/java/com/la/mymedia/player/: AudioPlayer.java  MediaPlayer.java  VideoPlayer.java  XPlay.java
MyApp/MyMedia/src/main/java/com/la/mymedia/player/activity/: PlayerEnterActivity.java  XPlayerActivity.java
MyApp/MyMedia/src/main/java/com/la/mymedia/player/hardware/: HardwareDecode.java
MyApp/MyMedia/src/main/java/com/la/mymedia/player/mp3/: Mp3Converter.java  Mp3Lame.java  Mp3LameBuilder.java
MyApp/MyMedia/src/main/java/com/la/mymedia/player/view/: VideoPreviewBar.java
MyApp/MyMedia/src/main/java/com/la/mymedia/util/: BitmapUtil.java  ContentUtil.java  FileUtil.java  ScreenUtil.java  ThreadPoolUtil.java  TimeUtil.java  YUVUtil.java
MyApp/MyMedia/src/main/res/layout/: activity_audio_handle.xml  activity_live.xml  activity_media_handle.xml  activity_preview.xml  activity_push.xml  activity_video_handle.xml  avtivity_player_enter.xml  item.xml  live_fragment.xml  main_activity.xml  manager_activity.xml  mian_activity.xml  my_media_fragment.xml  player_activity_main.xml  player_fragement.xml  recoeder_fragment.xml  recorder_filter_item.xml  smart_activity.xml  video_process_fragment.xml  video_process_function_item.xml  xplayer_activity.xml
MyApp/MyMedia/src/main/res/values/: strings.xml
MyApp/MyMedia/src/test/java/com/la/mymedia/: ExampleUnitTest.java
XPlay/app/src/main/cpp/: CMakeLists.txt
XPlay/app/src/main/cpp/native-lib/: GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IPlayer.cpp  IPlayer.h  IVideoView.h  SLAudioPlay.cpp  XShader.h  XTexture.h  XThread.cpp
(+224 files in other folders)
